--- a/pages/sony.html
+++ b/pages/sony.html
@@ -163,14 +163,14 @@
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
 </a>
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/microsoft.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/sony.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
-<!-- Xbox -->
+<!-- PS1 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/xbox.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps1/ps1.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=64 width=64>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -179,13 +179,13 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox -->
+<!-- End PS1 -->
 
-<!-- Xbox 360 -->
+<!-- PS2 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox360/xbox360.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox360/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/ps2.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -194,13 +194,13 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox 360 -->
+<!-- End PS2 -->
 
-<!-- Xbox One -->
+<!-- PSP -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xboxone/xboxone.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xboxone/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/psp.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -209,12 +209,71 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox One -->
+<!-- End PSP -->
+
+<!-- PS3 -->
+<li>
+  <label>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps3/ps3.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps3/logo.png" height=32 width=128>
+  <div class="m-menu">
+    <div class="m-menu__header">
+  </label>
+    </div>
+    <ul>
+    </a>
+    </ul>
+</li>
+<!-- End PS3 -->
+
+<!-- PS Vita -->
+<li>
+  <label>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psvita/psvita.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psvita/logo.png" height=32 width=128>
+  <div class="m-menu">
+    <div class="m-menu__header">
+  </label>
+    </div>
+    <ul>
+    </a>
+    </ul>
+</li>
+<!-- End PS Vita -->
+
+<!-- PS4 -->
+<li>
+  <label>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/ps4.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128>
+  <div class="m-menu">
+    <div class="m-menu__header">
+  </label>
+    </div>
+    <ul>
+    </a>
+    </ul>
+</li>
+<!-- End PS4 -->
+
+<!-- PS5 -->
+<li>
+  <label>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/ps5.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128>
+  <div class="m-menu">
+    <div class="m-menu__header">
+  </label>
+    </div>
+    <ul>
+    </a>
+    </ul>
+</li>
+<!-- End PS5 -->
 
     <br></br><br></br></ul>
   </div>
 </li>
-<!-- End Microsoft Company -->
 
 <script>
   document.addEventListener('copy', function (e) {
