--- a/pages/ps1/09.html
+++ b/pages/ps1/09.html
@@ -221,7 +221,7 @@
       <input type="checkbox" id="menu" name="menu" class="m-menu__checkbox" checked>
 <div class="m-menu">
 <div class="m-menu__header">
-<a href="https://hv-leaf.github.io/Ch3at/" rel="noopener noreferrer">
+<a href="https://hv-leaf.github.io/Ch3at/pages/ps1/ps1.html" rel="noopener noreferrer">
   <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs">
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
