--- a/pages/ps1/09.html
+++ b/pages/ps1/09.html
@@ -237,7 +237,7 @@
 <div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g1">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
 <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul>
  <PS1art1>(ps1game1)</PS1art1>
  <br></br>
@@ -265,7 +265,7 @@
 <div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g2">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
 <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul>
 <PS1art1>(ps1game2)</PS1art1>
 <br></br>
@@ -362,7 +362,7 @@
 <input type="checkbox" id="ps1-g3" name="ps1" class="m-menu__checkbox"><div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g3">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
 <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art1>(ps1game3)</PS1art1>
 <br></br>            
@@ -451,7 +451,7 @@
 <div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g4">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
 <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul>
 <PS1art1>(ps1game4)</PS1art1><li><label>
 <label style="text-align: left;">
@@ -490,7 +490,7 @@
 <div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g5">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
 <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul>
 <li><label>
 <PS1art1>(ps1game5)</PS1art1>
@@ -567,7 +567,7 @@
 <div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g6">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
 <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art1>(ps1game6)</PS1art1>
 <p class="greencode">Gameshark Codes</p>
@@ -620,7 +620,7 @@
 <div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g7">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
 <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art1>(ps1game7)</PS1art1>
 <p class="greencode">Gameshark Codes</p>
@@ -749,7 +749,7 @@
 <div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g8">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
 <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art1>(ps1game8)</PS1art1>
 <p>At the main menu, highlight "Memory Card" press (LEFT) or (RIGHT), then choose</p> <p class="greencode">Codes</p>
@@ -1364,7 +1364,7 @@ Have Fists Skate Board</p></td>
 <div class="m-menu">
 <div class="m-menu__header">
 <label class="m-menu__toggle" for="ps1-g9">
-<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
+<svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label><span>
 <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art1>(ps1game9)</PS1art1>
 <label style="text-align: left;">
@@ -1453,7 +1453,7 @@ Have Fists Skate Board</p></td>
       <div class="m-menu">
       <div class="m-menu__header">
       <label class="m-menu__toggle" for="ps1-g10">
-      <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
+      <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
       <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art1>(ps1game10)</PS1art1>
 <p class="greencode">Gameshark Codes</p> 
@@ -1494,7 +1494,7 @@ Have Fists Skate Board</p></td>
       <div class="m-menu">
       <div class="m-menu__header">
       <label class="m-menu__toggle" for="ps1-g11">
-      <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
+      <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
       <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art2>(ps1game11)</PS1art2>
 
@@ -1577,7 +1577,7 @@ then hold (PSelect) and press (Down)(PR2)(PL1)(Up)(PR2)</p>
       <div class="m-menu">
       <div class="m-menu__header">
       <label class="m-menu__toggle" for="ps1-g12">
-      <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
+      <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#FFF" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
       <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art2>(ps1game12)</PS1art2>
 
