--- a/pages/radio.html
+++ b/pages/radio.html
@@ -5,7 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatroom</title>
     <style>
-        /* Your CSS styling here */
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: black;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: white;
+        }
+
+        .container {
+            background: linear-gradient(to bottom, black, #333);
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            max-width: 400px;
+            width: 100%;
+            text-align: center;
+            position: relative;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        .username-input, .message-input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-bottom: 10px;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: white;
+        }
+
+        .button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        .glow-border {
+            animation: neon-glow 1.5s ease-in-out infinite;
+        }
+
+        .message {
+            word-wrap: break-word;
+            padding: 10px 15px;
+            border-radius: 20px;
+            background-color: #333;
+            color: white;
+            max-width: 70%;
+            margin-bottom: 10px;
+        }
+
+        .username {
+            color: red;
+            font-weight: bold;
+        }
+
+        @keyframes neon-glow {
+            0%, 100% {
+                border-color: #ff00ff;
+                box-shadow: 0 0 5px #ff00ff, 0 0 10px #ff00ff, 0 0 5px #ff00ff;
+            }
+            50% {
+                border-color: #ff0099;
+                box-shadow: 0 0 5px #ff0099, 0 0 15px #ff0099, 0 0 2px #ff0099;
+            }
+        }
+    </style>
     </style>
 </head>
 <body>
