--- a/Japan.html
+++ b/Japan.html
@@ -1,1 +1,58 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Japan Adventure 2024</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            padding-top: 50px;
+        }
+        .title {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+        .subtext {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+        }
+        .progress-container {
+            width: 80%;
+            margin: 0 auto;
+        }
+        .progress-bar {
+            background-color: white;
+            border-radius: 25px;
+            padding: 3px;
+        }
+        .progress {
+            background-color: #00ff00;
+            width: 24%;
+            height: 30px;
+            border-radius: 20px;
+        }
+        .progress-text {
+            position: relative;
+            top: -30px;
+            font-size: 1em;
+            color: black;
+        }
+    </style>
+</head>
+<body>
+    <div class="title">Japan Adventure 2024</div>
+    <div class="subtext">Baby Carrot Spending Money</div>
+    <div class="progress-container">
+        <div class="progress-bar">
+            <div class="progress">
+                <div class="progress-text">$240.00/$1000.00</div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
