--- a/Japan.html
+++ b/Japan.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,30 +28,29 @@
             background-color: white;
             border-radius: 25px;
             padding: 3px;
+            position: relative;
         }
         .progress {
             background-color: #00ff00;
             width: 24%;
             height: 30px;
             border-radius: 20px;
+            position: relative;
         }
         .progress-text {
-            position: relative;
-            top: -30px;
-            font-size: 1em;
+            position: absolute;
+            width: 100%;
+            top: 0;
+            left: 0;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 10px;
+            box-sizing: border-box;
+        }
+        .earned {
             color: black;
         }
-    </style>
-</head>
-<body>
-    <div class="title">Japan Adventure 2024</div>
-    <div class="subtext">Baby Carrot Spending Money</div>
-    <div class="progress-container">
-        <div class="progress-bar">
-            <div class="progress">
-                <div class="progress-text">$240.00/$1000.00</div>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+        .remaining {
+            color: white;
