--- a/Japan.html
+++ b/Japan.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Progress Bar with Text</title>
+<title>Japan Adventure 2024</title>
 <style>
 
 
