--- a/Japan.html
+++ b/Japan.html
@@ -177,8 +177,8 @@
 <div class="progress-bar">
   <div class="completeprogress">
   </div>
-  <div class="progress-text-center">🏨</div>
-    <div class="progress-text-right">$768.70</div>
+  
+    <div class="progress-text-right">🏨$768.70</div>
   
 </div>
 <p></p>
