--- a/Japan.html
+++ b/Japan.html
@@ -154,11 +154,9 @@
 
 <p>In Japan Travel</p>
 <div class="progress-bar">
-  <div class="travelprogress">
-  <div class="train">🚆</div>
+  <div class="completeprogress">
   </div>
-    <div class="progress-text-left">$260.00</div>
-    <div class="progress-text-right">$260.00</div>
+    <div class="progress-text-right">🚆$260.00</div>
   
 </div>
 <p></p>
@@ -167,8 +165,7 @@
 <div class="progress-bar">
   <div class="completeprogress">
   </div>
-  <div class="progress-text-center">✈️</div>
-    <div class="progress-text-right">$2,027.20</div>
+    <div class="progress-text-right">✈️$2,027.20</div>
   
 </div>
 <p></p>
@@ -177,9 +174,7 @@
 <div class="progress-bar">
   <div class="completeprogress">
   </div>
-  
-    <div class="progress-text-right">🏨$768.70</div>
-  
+    <div class="progress-text-right">🏨$768.70</div>  
 </div>
 <p></p>
 
@@ -188,8 +183,7 @@
 <div class="progress-bar">
   <div class="completeprogress">
   </div>
-    <div class="progress-text-center">🍣</div>
-  <div class="progress-text-right">$500.00</div>
+  <div class="progress-text-right">🍣$500.00</div>
 </div>
 
 
