--- a/Japan.html
+++ b/Japan.html
@@ -66,7 +66,7 @@
     overflow: visible; /* Allow overflow for absolutely positioned elements */
   }
 
-         .moneyprogressleaf {
+   .moneyprogressleaf {
     width: 6%; /* Change this to adjust the progress */
     background-color: #4caf50;
     border-radius: 5px;
@@ -144,8 +144,9 @@
 
 <p>Spending Money</p>
 <div class="progress-bar">
-  <div class="moneyprogresscarrot">🥕</div>
-
+  <div class="moneyprogresscarrot">
+<div class="carrot">🥕</div>
+</div>
   <div class="progress-text-left">$80.00</div>
   <div class="progress-text-right">$1,000.00</div>
 </div>
