--- a/Japan.html
+++ b/Japan.html
@@ -148,7 +148,7 @@
 <div class="carrot">🥕</div>
 </div>
   <div class="progress-text-left">$80.00</div>
-  <div class="progress-text-right">$1,000.00</div>
+  <div class="progress-text-right">$1,000.00‍</div>
 </div>
 
 <p></p>
@@ -165,7 +165,7 @@
 <div class="progress-bar">
   <div class="completeprogress">
   </div>
-    <div class="progress-text-right">🚆$260.00</div>
+    <div class="progress-text-right">$260.00 🚆</div>
   
 </div>
 <p></p>
@@ -174,7 +174,7 @@
 <div class="progress-bar">
   <div class="completeprogress">
   </div>
-    <div class="progress-text-right">✈️$2,027.20</div>
+    <div class="progress-text-right">$2,027.20 ✈️</div>
   
 </div>
 <p></p>
@@ -183,7 +183,7 @@
 <div class="progress-bar">
   <div class="completeprogress">
   </div>
-    <div class="progress-text-right">🏨$768.70</div>  
+    <div class="progress-text-right">$768.70 🏨</div>  
 </div>
 <p></p>
 
@@ -192,7 +192,7 @@
 <div class="progress-bar">
   <div class="completeprogress">
   </div>
-  <div class="progress-text-right">🍣$500.00</div>
+  <div class="progress-text-right">$500.00 🍣</div>
 </div>
 
 
